# dish_tray_monitoring

./: .gitattributes  README.md  docker-compose.yaml  pyproject.toml
src/feedback/: Dockerfile  Pipfile  app.py  requirements.txt
src/items_monitoring/: Dockerfile  Pipfile  monitor.py  requirements.txt  train.py
src/items_monitoring/notebooks/: experiments.ipynb
src/items_monitoring/trackers/: tracker.yaml
