[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "items_monitoring"
version = "0.1.0"
authors = [
    {name = "Chau", email = "playerzawesome@gmail.com"},
]
description = "Use this project to create a starter template for your next Python project."
readme = "README.md"

[tool.ruff]
line-length = 119

[tool.isort]
line_length = 119
